bee-common/bee-common-derive/tests/packable/fail/no_ty_enum.stderr
error: Enums that derive `Packable` require a `#[packable(ty = ...)]` attribute.
  --> $DIR/no_ty_enum.rs:10:10
   |
10 | pub enum OptI32 {
   |          ^^^^^^
